--- a/src/addons/mod/quiz/pages/player/player.html
+++ b/src/addons/mod/quiz/pages/player/player.html
@@ -40,7 +40,9 @@
         <!-- Questions -->
         <form name="addon-mod_quiz-player-form" *ngIf="questions.length && !quizAborted && !showSummary" #quizForm>
             <div *ngFor="let question of questions">
-                <ion-card id="addon-mod_quiz-question-{{question.slot}}">
+                
+				<ion-card><div  [innerHTML]=question.sectionhtml></div></ion-card>
+				<ion-card id="addon-mod_quiz-question-{{question.slot}}">
                     <!-- "Header" of the question. -->
                     <ion-item-divider>
                         <ion-label>
