--- a/src/core/features/course/pages/course-summary/course-summary.html
+++ b/src/core/features/course/pages/course-summary/course-summary.html
@@ -141,15 +141,23 @@
             </ion-button>
         </ng-container>
 
-        <ion-button expand="block" (click)="enrolMe()" *ngIf="!isEnrolled && (selfEnrolInstances.length > 0 || otherEnrolments)"
+       <!-- <ion-button expand="block" (click)="enrolMe()" *ngIf="!isEnrolled && (selfEnrolInstances.length > 0 || otherEnrolments)"
             class="ion-text-wrap">
             {{ 'core.courses.enrolme' | translate }}
-        </ion-button>
+        </ion-button> -->
+		
+		<ion-card class="core-info-card ion-text-wrap" *ngIf="!isEnrolled && (selfEnrolInstances.length > 0 || otherEnrolments)">
+            <ion-item>
+                <ion-icon name="fas-info-circle" slot="start" aria-hidden="true"></ion-icon>
+                <ion-label ><p [innerHTML]="'core.courses.otherenrolments' | translate"></p> </ion-label> 
+            </ion-item>
+        </ion-card>
 
         <ion-card class="core-info-card ion-text-wrap" *ngIf="!isEnrolled && !selfEnrolInstances.length && !otherEnrolments">
             <ion-item>
                 <ion-icon name="fas-info-circle" slot="start" aria-hidden="true"></ion-icon>
-                <ion-label>{{ 'core.courses.notenrollable' | translate }}</ion-label>
+                <ion-label> <p [innerHTML]="'core.courses.notenrollable' | translate"></p></ion-label>
+				
             </ion-item>
         </ion-card>
 
