--- a/src/core/features/login/pages/credentials/credentials.html
+++ b/src/core/features/login/pages/credentials/credentials.html
@@ -24,10 +24,10 @@
                 <img *ngIf="!logoUrl" src="assets/img/login_logo.png" role="presentation" alt="">
             </div>
 
-            <h3 *ngIf="siteName" class="ion-padding core-sitename">
+           <!--  <h3 *ngIf="siteName" class="ion-padding core-sitename">
                 <core-format-text [text]="siteName" [filter]="false"></core-format-text>
-            </h3>
-            <p class="core-siteurl">{{siteUrl}}</p>
+            </h3>  -->
+         <!--   <p class="core-siteurl">{{siteUrl}}</p> -->
         </div>
 
         <form [formGroup]="credForm" (ngSubmit)="login($event)" class="core-login-form" #credentialsForm>
@@ -51,7 +51,7 @@
             </ion-button>
             <!-- Remove this once Ionic fixes this bug: https://github.com/ionic-team/ionic-framework/issues/19368 -->
             <input type="submit" class="core-submit-hidden-enter" />
-
+<!--
             <ng-container *ngIf="showScanQR">
                 <div class="ion-text-center ion-padding">{{ 'core.login.or' | translate }}</div>
                 <ion-button expand="block" fill="outline" class="ion-margin" (click)="showInstructionsAndScanQR()">
@@ -59,6 +59,7 @@
                     {{ 'core.scanqr' | translate }}
                 </ion-button>
             </ng-container>
+			-->
         </form>
 
         <!-- Forgotten password option. -->
