--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Ducis Language App</title>
+    <title>Ducis Language Learning App</title>
 
     <base href="/" />
 
