--- a/src/core/features/settings/pages/about/about.html
+++ b/src/core/features/settings/pages/about/about.html
@@ -22,7 +22,7 @@
             <ion-icon name="fas-user-shield" slot="start" aria-hidden="true"></ion-icon>
             <ion-label>{{ 'core.settings.privacypolicy' | translate }}</ion-label>
         </ion-item>
-        <ion-item *ngIf="a11yStatement" class="ion-text-wrap" button core-link auto-login="no" [href]="a11yStatement" detail="true"
+       <!-- <ion-item *ngIf="a11yStatement" class="ion-text-wrap" button core-link auto-login="no" [href]="a11yStatement" detail="true"
             detailIcon="open-outline">
             <ion-icon name="fas-universal-access" slot="start" aria-hidden="true"></ion-icon>
             <ion-label>{{ 'core.settings.accessstatement' | translate }}</ion-label>
@@ -31,7 +31,7 @@
             detailIcon="open-outline">
             <ion-icon name="fas-bullhorn" slot="start" aria-hidden="true"></ion-icon>
             <ion-label>{{ 'core.settings.helpusimprove' | translate }}</ion-label>
-        </ion-item>
+        </ion-item>-->
     </ion-list>
 </ion-content>
 
